--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,30 +67,44 @@ header h1{
 #navegacion{
     float:left;
     width:100%;
-    background:yellow;
+    
     font-size:93%;
     line-height:normal;
     width: 80%;
     margin: 0 10% 0 10%;
+    border-bottom: solid 1px;
+
 }
 
 #navegacion ul {
     margin:0;
     padding:0;
     list-style:none;
+    
+    
 }
 
 #navegacion li{
     float:left;
     margin:0;
     padding:0 0 0 9px;
+    
+    
 }
 
 #navegacion a{
-    display:block;
-    padding:5px 15px 4px 6px;
+    text-align: center;
+    padding:5px 15px 5px 15px;
     float:left;
     text-decoration: none;
     color: black;
+    background-color: grey;
+    border-radius: 20% 20% 0 0;
+    
 }
 
+@media (max-width:1900px){
+    header h1{
+        font-size: 40px;
+    }
+}
