--- a/css/estilos.css
+++ b/css/estilos.css
@@ -32,6 +32,10 @@ h1{
     color: black;
 }
 
+#contenedorNavegacion{
+    height: auto;
+}
+
 #header_navigation{
     position: absolute;
     top: 20%;
@@ -65,14 +69,12 @@ header h1{
 }
 
 #navegacion{
-    float:left;
-    width:100%;
-    
+    float:left; 
     font-size:93%;
     line-height:normal;
     width: 80%;
     margin: 0 10% 0 10%;
-    border-bottom: solid 1px;
+    border-bottom: solid 1px rgb(231, 231, 231);
 
 }
 
@@ -80,16 +82,12 @@ header h1{
     margin:0;
     padding:0;
     list-style:none;
-    
-    
 }
 
 #navegacion li{
     float:left;
     margin:0;
-    padding:0 0 0 9px;
-    
-    
+    padding:0 0 0 9px; 
 }
 
 #navegacion a{
@@ -98,9 +96,8 @@ header h1{
     float:left;
     text-decoration: none;
     color: black;
-    background-color: grey;
-    border-radius: 20% 20% 0 0;
-    
+    background-color: rgb(238, 238, 238);
+    border-radius: 15px 15px 0 0;   
 }
 
 @media (max-width:1900px){
