--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,9 +10,30 @@ header{
 h1{
     margin: 0;
 }
+
+.container {
+    display: grid;
+    grid-template-areas: 
+    'header header header header header header'
+    'info info info info aside aside'
+    'footer footer footer footer footer footer ';
+    margin-right: 24%;
+    margin-left: 24%;
+    padding: 10px;
+}
+
+.container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+}
+
+
+/*Posicionamiento logo*/
 #logo{
     position: absolute;
 }
+/* posicionamiento del inicio sesion y el login */
 #credentials{
     position: absolute;
     top: 0;
@@ -31,7 +52,7 @@ h1{
     text-decoration: none;
     color: black;
 }
-
+/* Posicionamiento de la navegación  */
 #contenedorNavegacion{
     height: auto;
 }
@@ -60,14 +81,19 @@ h1{
     color: black;
     
 }
-
+/* posicionamiento y estilos del header */
 header h1{
     position: absolute;
     bottom: 15%;
     font-size: 50px;
     color: darkcyan;
 }
-
+@media (max-width:1900px){
+    header h1{
+        font-size: 40px;
+    }
+}
+/* Posicionamiento del segundo menu de navegación  */
 #navegacion{
     float:left; 
     font-size:93%;
@@ -100,8 +126,141 @@ header h1{
     border-radius: 15px 15px 0 0;   
 }
 
-@media (max-width:1900px){
-    header h1{
-        font-size: 40px;
-    }
+.info {grid-area: info;}
+
+/* info */
+
+.info {
+    display: grid;
+    background-color: #2196F3;
 }
+
+.info > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px;
+}
+
+/* contenidoPrograma SIDE */
+
+.contenidoPrograma-titulo {
+    color: #4ebec9;
+}
+
+.info-content{
+    margin: 0 auto;
+    clear: both;
+    display: flex;
+}
+
+.contenidoPrograma-content {
+    vertical-align:middle;
+}
+
+.contenidoPrograma-content > p{
+    margin-top: 15px;
+}
+
+.contenidoPrograma-img > img{
+    display: block;
+    margin: 10px 50px 10px 50px;  /* Top Right Bottom left */
+}
+
+.contenidoPrograma > * {
+    text-align: justify;
+}
+
+/* FINALIZA contenidoPrograma SIDE */
+
+/* SCHEDULE */
+
+.schedule-titulo {
+    color: #077782;
+    margin-bottom: 10px;
+}
+
+.Schedule > * {
+    text-align: justify;
+}
+
+.rosa{
+    background-color: pink;
+    border: pink;
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.226);
+    border-style: solid;
+    transform: rotate(3deg);
+}
+
+.verde{
+    background-color: rgb(131, 210, 131);
+    border: rgb(131, 210, 131);
+    border-style: solid;
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.226);
+    transform: rotate(-3deg);
+}
+.amarillo{
+    background-color: rgb(221, 224, 124);
+    border: rgb(221, 224, 124);
+    border-style: solid;
+    transform: rotate(-3deg);
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.226);
+}
+.azul{
+    background-color: rgb(67, 163, 180);
+    border: rgb(67, 163, 180);
+    border-style: solid;
+    transform: rotate(3deg);
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.226);
+}
+
+
+
+/* FINALIZA SCHEDULE */
+
+/* FESTIVAL SPACES */
+
+.festival-titulo {
+    color: #077782;
+    margin-bottom: 10px;
+    text-align: justify;
+}
+
+.festival-texto {
+    text-align: justify;
+    margin-bottom: 20px;
+}
+
+.festival-boxes {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 30px;
+}
+
+.festival-boxes > div {
+    border: 1px solid slateblue;
+    width: 100%;
+    height: 180px;
+    text-align: left;
+}
+
+.festival-boxes > div > h2 {
+    color: #3d5e7a;
+}
+
+.festival-boxes > div > * {
+    margin: 15px;
+}
+
+.festival-places-FINALIZA-texto {
+    margin-top: 20px;
+    text-align: justify;
+}
+
+.festival-ULTIMO-titulo {
+    margin-top: 10px;
+    color: #4ebec9;
+}
+
+/* FINALIZA FESTIVAL SPACES */
+
+/* FINALIZA info */
